# little-learners-hub

./: .env.production  Dockerfile  README.md  agent.md  build_backend.txt  build_backend_v.txt  build_direct.txt  build_out.txt  build_out_verbose.txt  check_backend.js  docker-compose.yml  full_test_output.txt  full_test_output_2.txt  full_test_output_3.txt  full_test_output_final.txt  full_test_output_final_2.txt  kidlearn.db  nginx.conf  openapi.yaml  out.txt  out_retry_2.txt  package-lock.json  package.json  playwright.config.ts  render.Dockerfile  render.yaml  simple_out.txt  tailwind.config.ts  test_output.txt  vite.config.ts
.github/workflows/: ci-cd.yml
backend/: Dockerfile  database.py  db.py  db_models.py  main.py  models.py  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 2dc36abb93d9_initial_migration.py
backend/routers/: auth.py  materials.py  stats.py  users.py
backend/tests/: README.md  conftest.py  test_api.py  test_database.py  test_simple.py  test_workflows.py
e2e/: integration.spec.ts
frontend/: tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: api.test.ts
frontend/src/components/: MaterialCard.tsx
frontend/src/pages/: Games.tsx  (+3 more)
playwright-report/: index.html
src/: index.css
src/components/: GradeSelector.tsx  Header.tsx  LoginModal.tsx  MaterialCard.tsx  TypeFilter.tsx
src/contexts/: AuthContext.tsx
src/lib/: apiClient.ts  apiErrors.ts  tokenStorage.ts
src/pages/: Games.tsx  Index.tsx  Materials.tsx  Submit.tsx
src/services/: api.ts
test-results/: .last-run.json
(+8 files in other folders)
